--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Minimalistic
-logo: /assets/img/logo.jpg
-email: person@address.com
-description: Minimalistic is a theme powered by Jekyll.
+title: Jingyi Tian
+logo: /assets/img/profile.jpg
+email: jtian6@central.uh.edu
+description: Postdoctoral Fellow
 favicon: true
 color-scheme: auto
 
